Added 1st section in about page

--- a/css/large.css
+++ b/css/large.css
@@ -1,3 +1,15 @@
+.logo {
+  width: 100px;
+  height: 100px;
+  top: 40px;
+  left: 40px;
+}
+
+.burger-btn {
+  top: 40px;
+  right: 40px;
+}
+
 .header__box-one__title {
   font-size: 7.2rem;
 }
@@ -8,5 +20,88 @@
 
 .header__box-two {
   bottom: 70px;
+}
+
+.about__title {
+  font-size: 4.4rem;
+}
+
+.about__wrapper {
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  padding: 3em 1.6em;
+}
+
+.about__wrapper__text {
+  padding-top: 3.4em;
+  padding-right: 3em;
+}
+
+.about__wrapper__text__one {
+  font-size: 3rem;
+}
+
+.about__wrapper__text__two {
+  font-size: 2rem;
+  line-height: 2.5rem;
+}
+
+.about__wrapper__img {
+  padding-top: 0;
+  width: 400px;
+}
+
+@media (min-width: 1030px) {
+  .about__wrapper {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    padding: 3em 1.6em;
+  }
+  .about__wrapper__text {
+    padding: 3.4em 3em 0;
+  }
+}
+
+@media (min-width: 1130px) {
+  .about__wrapper__img {
+    width: 100%;
+  }
+}
+
+@media (min-width: 1330px) {
+  .about__wrapper {
+    padding: 3.4em 2em;
+  }
+  .about__wrapper__text__one {
+    font-size: 3.6rem;
+  }
+  .about__wrapper__text__two {
+    font-size: 2.2rem;
+    line-height: 2.8rem;
+  }
+}
+
+@media (min-width: 1400px) {
+  .about__wrapper {
+    padding: 3.4em 4em;
+  }
+}
+
+@media (min-width: 1600px) {
+  .about__wrapper {
+    padding: 3.4em 6em;
+  }
+}
+
+@media (min-width: 1700px) {
+  .about__wrapper {
+    padding: 3.4em 8em;
+  }
+}
+
+@media (min-width: 1800px) {
+  .about__wrapper {
+    padding: 3.4em 10em;
+  }
 }
 /*# sourceMappingURL=large.css.map */
