--- a/css/medium.css
+++ b/css/medium.css
@@ -1,3 +1,7 @@
+.logo {
+  left: 35px;
+}
+
 .header__box-one__title {
   font-size: 6rem;
 }
@@ -11,7 +15,33 @@
   font-size: 3rem;
 }
 
+.about__title {
+  font-size: 4rem;
+}
+
+.about__wrapper {
+  padding-bottom: 5em;
+}
+
+.about__wrapper__text__one {
+  font-size: 2.8rem;
+}
+
+.about__wrapper__text__two {
+  font-size: 2rem;
+  line-height: 2.5rem;
+}
+
+.about__wrapper__img {
+  width: 500px;
+}
+
 @media (min-width: 890px) {
+  .logo {
+    width: 90px;
+    height: 90px;
+    left: 35px;
+  }
   .header__box-one__title {
     font-size: 6.6rem;
   }
