--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,5 +1,5 @@
 $main-color: #171717;
 $dark-color: #101010;
-$purple-color: #c70039;
+$blue-color: #035aa6;
 $white-color: #f5f5f5;
 $menu-letters-color: #ffffffcc;
