--- a/scss/small.scss
+++ b/scss/small.scss
@@ -10,8 +10,39 @@
         }
     }
 
-    &__img {
+    &__img-md {
+        display: none;
+    }
+
+    &__img-big {
+        display: block;
+        position: absolute;
+        height: 100%;
         right: 40px;
+        bottom: 0;
+        z-index: -10;
+    }
+}
+
+//ABOUT
+
+.about {
+    &__title {
+        font-size: 3.8rem;
+    }
+
+    &__wrapper {
+        padding: 0 5em;
+
+        &__text {
+            &__two {
+                font-size: 1.8rem;
+            }
+        }
+
+        &__img {
+            width: 420px;
+        }
     }
 }
 
