--- a/css/large.css
+++ b/css/large.css
@@ -51,6 +51,10 @@
   width: 400px;
 }
 
+.technologies__title {
+  font-size: 4.4rem;
+}
+
 @media (min-width: 1030px) {
   .about__wrapper {
     -ms-flex-wrap: nowrap;
@@ -63,8 +67,15 @@
 }
 
 @media (min-width: 1130px) {
+  .about__wrapper__text {
+    padding-top: 5em;
+  }
   .about__wrapper__img {
     width: 100%;
+  }
+  .technologies__wrapper__container__icon {
+    padding: .4em .7em;
+    font-size: 11.6rem;
   }
 }
 
@@ -84,6 +95,9 @@
 @media (min-width: 1400px) {
   .about__wrapper {
     padding: 3.4em 4em;
+  }
+  .technologies__wrapper__container__icon {
+    padding: .4em .9em;
   }
 }
 
