--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 .blue-color {
-  color: #035aa6;
+  color: #2f8fe2;
 }
 
 .burger-btn {
@@ -122,7 +122,7 @@ body {
   height: 100%;
   -webkit-transform: scaleY(0);
           transform: scaleY(0);
-  background-color: #035aa6;
+  background-color: #2f8fe2;
   -webkit-transition: -webkit-transform .3s;
   transition: -webkit-transform .3s;
   transition: transform .3s;
@@ -227,7 +227,7 @@ body {
 }
 
 .header__box-two .fab:hover {
-  color: #035aa6;
+  color: #2f8fe2;
   -webkit-transform: scale(1.2, 1.2);
           transform: scale(1.2, 1.2);
 }
@@ -294,6 +294,60 @@ body {
   width: 270px;
 }
 
+.technologies {
+  text-align: center;
+  color: #f5f5f5;
+}
+
+.technologies__title {
+  padding: 1em 1em 0;
+  font-size: 3rem;
+}
+
+.technologies__wrapper {
+  padding: 2em 1em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #ffffffcc;
+}
+
+.technologies__wrapper__container {
+  width: 90vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.technologies__wrapper__container__icon {
+  padding: .2em;
+  font-size: 7rem;
+}
+
+@media (min-width: 280px) {
+  .technologies__wrapper__container__icon {
+    font-size: 8rem;
+  }
+}
+
 @media (min-width: 290px) {
   .header__box-one__title {
     font-size: 3.2rem;
@@ -307,6 +361,15 @@ body {
   .about__wrapper__img {
     width: 300px;
   }
+  .technologies__wrapper__container__icon {
+    font-size: 9.4rem;
+  }
+}
+
+@media (min-width: 370px) {
+  .technologies__wrapper__container__icon {
+    font-size: 10.4rem;
+  }
 }
 
 @media (min-width: 400px) {
@@ -317,7 +380,6 @@ body {
     font-size: 2.1rem;
   }
   .about__title {
-    padding-top: 3.4em;
     font-size: 3.4rem;
   }
   .about__text {
@@ -337,6 +399,13 @@ body {
   }
   .about__wrapper__img {
     width: 380px;
+  }
+  .technologies__title {
+    font-size: 3.4rem;
+  }
+  .technologies__wrapper__container__icon {
+    padding: .2em .3em;
+    font-size: 10.8rem;
   }
 }
 
@@ -362,6 +431,16 @@ body {
   .about__wrapper__img {
     padding-top: 3em;
     width: 420px;
+  }
+  .technologies__title {
+    padding-top: 2.8em;
+    font-size: 3.6rem;
+  }
+  .technologies__wrapper__container {
+    width: 70vw;
+  }
+  .technologies__wrapper__container__icon {
+    font-size: 11.4rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
