--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,5 +1,5 @@
 $main-color: #171717;
 $dark-color: #101010;
-$blue-color: #035aa6;
+$blue-color: #2f8fe2;
 $white-color: #f5f5f5;
 $menu-letters-color: #ffffffcc;
