--- a/scss/large.scss
+++ b/scss/large.scss
@@ -64,6 +64,14 @@
     }
 }
 
+.technologies {
+    &__title {
+        font-size: 4.4rem;
+    }
+}
+
+
+
 //-------MEDIA-------
 
 @media (min-width: 1030px) {
@@ -82,8 +90,24 @@
 @media (min-width: 1130px) {
     .about {
         &__wrapper {
+            &__text {
+                padding-top: 5em;
+            }
+
             &__img {
                 width: 100%;
+            }
+        }
+    }
+
+    .technologies {
+        &__wrapper {
+            &__container {
+
+                &__icon {
+                    padding: .4em .7em;
+                    font-size: 11.6rem;
+                }
             }
         }
     }
@@ -112,6 +136,17 @@
     .about {
         &__wrapper {
             padding: 3.4em 4em;
+        }
+    }
+
+    .technologies {
+        &__wrapper {
+            &__container {
+
+                &__icon {
+                    padding: .4em .9em;
+                }
+            }
         }
     }
 }
