--- a/css/style.css
+++ b/css/style.css
@@ -342,6 +342,29 @@ body {
   font-size: 7rem;
 }
 
+.footer {
+  width: 100%;
+  height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #101010;
+  font-size: 1.4rem;
+  text-align: center;
+  color: #f5f5f5;
+  letter-spacing: .1rem;
+}
+
 @media (min-width: 280px) {
   .technologies__wrapper__container__icon {
     font-size: 8rem;
