--- a/scss/medium.scss
+++ b/scss/medium.scss
@@ -59,6 +59,14 @@
     }
 }
 
+// PORTFOLIO
+
+.portfolio {
+    &__title {
+        font-size: 4rem;
+    }
+}
+
 //-------MEDIA-------
 
 @media (min-width: 890px) {
