--- a/scss/small.scss
+++ b/scss/small.scss
@@ -64,6 +64,14 @@
     }
 }
 
+//PORTFOLIO
+
+.portfolio {
+    &__title {
+        font-size: 3.8rem;
+    }
+}
+
 //--------MEDIA--------
 
 @media (min-width: 680px) {
