--- a/css/style.css
+++ b/css/style.css
@@ -342,6 +342,101 @@ body {
   font-size: 7rem;
 }
 
+.portfolio {
+  text-align: center;
+  color: #f5f5f5;
+}
+
+.portfolio__title {
+  padding-top: 3.4em;
+  font-size: 3rem;
+}
+
+.portfolio__text {
+  padding-top: .5em;
+  font-size: 1.4rem;
+}
+
+.portfolio__container {
+  margin-top: 2em;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  background-color: tomato;
+}
+
+.portfolio__container__left-box {
+  position: relative;
+  margin: .6em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  background-color: royalblue;
+}
+
+.portfolio__container__left-box__image__link__img {
+  width: 100%;
+  height: 100%;
+}
+
+.portfolio__container__left-box__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #101010;
+}
+
+.portfolio__container__left-box__content__title {
+  padding: .4em .4em 0;
+  text-align: left;
+  color: #2f8fe2;
+}
+
+.portfolio__container__left-box__content__text {
+  padding: .8em .8em 1.8em;
+  text-align: left;
+  font-size: 1.4rem;
+}
+
+.portfolio__container__left-box__content__btn {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  width: 120px;
+  margin-bottom: 20px;
+  padding: .5em 1em;
+  background: none;
+  border: 1px solid #2f8fe2;
+  text-decoration: none;
+  font-size: 1.4rem;
+  color: #2f8fe2;
+  cursor: pointer;
+  -webkit-transition: background-color .3s;
+  transition: background-color .3s;
+}
+
+.portfolio__container__left-box__content__btn:hover {
+  background-color: #2f8fe2;
+  color: #f5f5f5;
+}
+
 .footer {
   width: 100%;
   height: 100px;
@@ -361,8 +456,8 @@ body {
   background-color: #101010;
   font-size: 1.4rem;
   text-align: center;
-  color: #f5f5f5;
   letter-spacing: .1rem;
+  color: #f5f5f5;
 }
 
 @media (min-width: 280px) {
@@ -430,6 +525,13 @@ body {
     padding: .2em .3em;
     font-size: 10.8rem;
   }
+  .portfolio__title {
+    font-size: 3.4rem;
+  }
+  .portfolio__text {
+    padding-top: .5em;
+    font-size: 1.6rem;
+  }
 }
 
 @media (min-width: 500px) {
@@ -464,6 +566,9 @@ body {
   }
   .technologies__wrapper__container__icon {
     font-size: 11.4rem;
+  }
+  .portfolio__title {
+    font-size: 3.6rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
