--- a/css/medium.css
+++ b/css/medium.css
@@ -45,6 +45,10 @@
   font-size: 4rem;
 }
 
+.portfolio__container__left-box {
+  max-width: 75%;
+}
+
 @media (min-width: 890px) {
   .logo {
     width: 90px;
