--- a/css/small.css
+++ b/css/small.css
@@ -52,6 +52,28 @@
   font-size: 3.8rem;
 }
 
+.portfolio__container__left-box {
+  max-width: 80%;
+}
+
+.portfolio__container__left-box__image__link__img {
+  display: none;
+}
+
+.portfolio__container__left-box__image__link__img-lg {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.portfolio__container__left-box__content__title {
+  padding: 1.2em 1.2em 0;
+}
+
+.portfolio__container__left-box__content__text {
+  padding: 1.8em 1.8em 2.2em;
+}
+
 @media (min-width: 680px) {
   .header__box-one__title {
     font-size: 5.4rem;
@@ -68,6 +90,27 @@
   .technologies__wrapper__container__icon {
     padding: .3em;
     font-size: 11rem;
+  }
+  .portfolio__container__left-box__content {
+    padding-bottom: 2em;
+  }
+  .portfolio__container__left-box__content__title {
+    padding: 1.4em 1.4em 0;
+  }
+  .portfolio__container__left-box__content__text {
+    padding: 2em 2em 2.8em;
+  }
+}
+
+@media (min-width: 700px) {
+  .portfolio__container {
+    padding-top: 1.6em;
+  }
+  .portfolio__container__left-box__content__title {
+    font-size: 3rem;
+  }
+  .portfolio__container__left-box__content__text {
+    font-size: 1.8rem;
   }
 }
 /*# sourceMappingURL=small.css.map */
