--- a/css/style.css
+++ b/css/style.css
@@ -373,7 +373,6 @@ body {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: start;
-  background-color: tomato;
 }
 
 .portfolio__container__left-box {
@@ -384,12 +383,15 @@ body {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  background-color: royalblue;
 }
 
 .portfolio__container__left-box__image__link__img {
   width: 100%;
   height: 100%;
+}
+
+.portfolio__container__left-box__image__link__img-lg {
+  display: none;
 }
 
 .portfolio__container__left-box__content {
@@ -482,11 +484,32 @@ body {
   .technologies__wrapper__container__icon {
     font-size: 9.4rem;
   }
+  .portfolio__container__left-box {
+    margin: .7em;
+  }
+  .portfolio__container__left-box__content__title {
+    padding: .6em .6em 0;
+  }
+  .portfolio__container__left-box__content__text {
+    padding: 1.1em 1.1em 1.8em;
+  }
+  .portfolio__container__left-box__content__btn {
+    margin-bottom: 2.3em;
+  }
 }
 
 @media (min-width: 370px) {
   .technologies__wrapper__container__icon {
     font-size: 10.4rem;
+  }
+  .portfolio__container__left-box {
+    margin: .8em;
+  }
+  .portfolio__container__left-box__content__title {
+    padding: .7em .7em 0;
+  }
+  .portfolio__container__left-box__content__text {
+    padding: 1.3em 1.3em 2em;
   }
 }
 
@@ -532,6 +555,36 @@ body {
     padding-top: .5em;
     font-size: 1.6rem;
   }
+  .portfolio__container__left-box {
+    margin: 1em;
+  }
+  .portfolio__container__left-box__content__title {
+    font-size: 2.8rem;
+    padding: .7em .7em 0;
+  }
+  .portfolio__container__left-box__content__text {
+    font-size: 1.6rem;
+    padding: 1.3em 1.3em 2em;
+  }
+  .portfolio__container__left-box__content__btn {
+    width: 150px;
+    margin-top: .6em;
+    margin-bottom: 2.8em;
+    padding: .6em 2em;
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 465px) {
+  .portfolio__container {
+    margin-top: 3em;
+  }
+  .portfolio__container__left-box {
+    max-width: 433px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 @media (min-width: 500px) {
@@ -569,6 +622,17 @@ body {
   }
   .portfolio__title {
     font-size: 3.6rem;
+  }
+  .portfolio__container__left-box {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .portfolio__container__left-box__content__title {
+    padding: .9em .9em 0;
+  }
+  .portfolio__container__left-box__content__text {
+    padding: 1.5em 1.5em 2em;
   }
 }
 /*# sourceMappingURL=style.css.map */
