--- a/scss/medium.scss
+++ b/scss/medium.scss
@@ -73,6 +73,14 @@
     }
 }
 
+//CONTACT
+
+.contact {
+    &__title {
+        font-size: 4rem;
+    }
+}
+
 //-------MEDIA-------
 
 @media (min-width: 890px) {
