--- a/css/small.css
+++ b/css/small.css
@@ -74,6 +74,23 @@
   padding: 1.8em 1.8em 2.2em;
 }
 
+.contact__title {
+  font-size: 3.8rem;
+}
+
+.contact__container__box__image__heading {
+  padding: 1.8em 0;
+  font-size: 3.8rem;
+}
+
+.contact__container__box__image__text {
+  font-size: 2.2rem;
+}
+
+.contact__container__box__image__text__content {
+  padding: 2.2em 0;
+}
+
 @media (min-width: 680px) {
   .header__box-one__title {
     font-size: 5.4rem;
