--- a/css/style.css
+++ b/css/style.css
@@ -439,6 +439,214 @@ body {
   color: #f5f5f5;
 }
 
+.contact {
+  text-align: center;
+  color: #f5f5f5;
+}
+
+.contact__title {
+  padding-top: 3.4em;
+  font-size: 3rem;
+}
+
+.contact__text {
+  padding-top: .5em;
+  font-size: 1.4rem;
+}
+
+.contact__container {
+  margin-top: 4em;
+  width: 100%;
+}
+
+.contact__container__box {
+  width: 100%;
+  padding: 1em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.contact__container__box__forms {
+  width: 100%;
+  max-width: 520px;
+}
+
+.contact__container__box__forms__label {
+  padding-left: 1em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  font-size: 1.4rem;
+}
+
+.contact__container__box__forms__input-line {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.contact__container__box__forms__input-line__label {
+  padding-left: 1em;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  font-size: 1.4rem;
+}
+
+.contact__container__box__forms__input-line__input-name, .contact__container__box__forms__input-line__input-email {
+  margin: 1em 0;
+  padding: 1em 2em;
+  width: 100%;
+  background: none;
+  border-radius: 8px;
+  border: none;
+  outline: none;
+  background: #101010;
+  font-family: 'Raleway', sans-serif;
+  color: #ffffffcc;
+  font-size: 1.6rem;
+}
+
+.contact__container__box__forms__input-subject {
+  margin: 1em 0;
+  padding: 1em 2em;
+  width: 100%;
+  background: none;
+  border-radius: 8px;
+  border: none;
+  outline: none;
+  background: #101010;
+  font-family: 'Raleway', sans-serif;
+  color: #ffffffcc;
+  font-size: 1.6rem;
+}
+
+.contact__container__box__forms__input-textarea {
+  max-width: 100%;
+  min-width: 100%;
+  margin: 1em 0;
+  padding: 1em 2em;
+  border-radius: 8px;
+  border: none;
+  outline: none;
+  background: #101010;
+  font-family: 'Raleway', sans-serif;
+  color: #ffffffcc;
+  font-size: 1.6rem;
+}
+
+.contact__container__box__forms__btn {
+  width: 120px;
+  margin: 2em 0;
+  padding: 1em 2em;
+  background: none;
+  border: 1px solid #2f8fe2;
+  text-decoration: none;
+  font-size: 1.4rem;
+  color: #2f8fe2;
+  cursor: pointer;
+  -webkit-transition: background-color .3s;
+  transition: background-color .3s;
+}
+
+.contact__container__box__forms__btn:hover {
+  background-color: #2f8fe2;
+  color: #f5f5f5;
+}
+
+.contact__container__box__image {
+  position: relative;
+  margin: 2em 0;
+  max-width: 520px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contact__container__box__image__shadow {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 10;
+}
+
+.contact__container__box__image__img {
+  width: 100%;
+  min-width: 200px;
+  border-radius: 8px;
+}
+
+.contact__container__box__image__heading {
+  position: absolute;
+  top: 0;
+  padding: .8em 0;
+  color: #ffffffcc;
+  z-index: 50;
+}
+
+.contact__container__box__image__text {
+  position: absolute;
+  padding-top: 2em;
+  min-height: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  font-size: 1.4rem;
+  color: #ffffffcc;
+  z-index: 50;
+}
+
+.contact__container__box__image__text__content {
+  padding: 1em 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: left;
+}
+
 .footer {
   width: 100%;
   height: 100px;
@@ -496,6 +704,14 @@ body {
   .portfolio__container__left-box__content__btn {
     margin-bottom: 2.3em;
   }
+  .contact__container__box__image__heading {
+    padding: 1.4em 0;
+    font-size: 2.8rem;
+  }
+  .contact__container__box__image__text {
+    padding-top: 2em;
+    font-size: 1.5rem;
+  }
 }
 
 @media (min-width: 370px) {
@@ -510,6 +726,12 @@ body {
   }
   .portfolio__container__left-box__content__text {
     padding: 1.3em 1.3em 2em;
+  }
+  .contact__container__box__image__text {
+    font-size: 1.6rem;
+  }
+  .contact__container__box__image__text__content {
+    padding: 1.4em 0;
   }
 }
 
@@ -573,6 +795,19 @@ body {
     padding: .6em 2em;
     font-size: 1.5rem;
   }
+  .contact__title {
+    font-size: 3.4rem;
+  }
+  .contact__text {
+    padding-top: .5em;
+    font-size: 1.6rem;
+  }
+}
+
+@media (min-width: 430px) {
+  .contact__container__box__image__text {
+    font-size: 1.8rem;
+  }
 }
 
 @media (min-width: 465px) {
@@ -584,6 +819,9 @@ body {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+  }
+  .contact__container__box__image__text__content {
+    padding: 2em 0;
   }
 }
 
@@ -633,6 +871,16 @@ body {
   }
   .portfolio__container__left-box__content__text {
     padding: 1.5em 1.5em 2em;
+  }
+  .contact__title {
+    font-size: 3.6rem;
+  }
+  .contact__container__box__image__heading {
+    padding: 2em 0;
+    font-size: 3rem;
+  }
+  .contact__container__box__image__text {
+    font-size: 2rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
