--- a/scss/small.scss
+++ b/scss/small.scss
@@ -103,6 +103,35 @@
     }
 }
 
+//CONTACT 
+
+.contact {
+    &__title {
+        font-size: 3.8rem;
+    }
+
+    &__container {
+        &__box {
+            &__image {
+
+                &__heading {
+                    padding: 1.8em 0;
+                    font-size: 3.8rem;
+                }
+
+                &__text {
+                    font-size: 2.2rem;
+
+                    &__content {
+                        padding: 2.2em 0;
+                    }
+                }
+            }
+        }
+    }
+
+}
+
 //--------MEDIA--------
 
 @media (min-width: 680px) {
