--- a/scss/style.scss
+++ b/scss/style.scss
@@ -313,14 +313,12 @@ body {
         flex-direction: column;
         align-items: center;
         justify-content: start;
-        // background-color: tomato;
 
         &__left-box {
             position: relative;
             margin: .6em;
             display: flex;
             flex-wrap: wrap;
-            // background-color: royalblue;
 
             &__image {
                 &__link {
@@ -375,6 +373,184 @@ body {
     }
 }
 
+
+//CONTACT
+
+.contact {
+    text-align: center;
+    color: $white-color;
+
+    &__title {
+        padding-top: 3.4em;
+        font-size: 3rem;
+    }
+
+    &__text {
+        padding-top: .5em;
+        font-size: 1.4rem;
+    }
+
+    &__container {
+        margin-top: 4em;
+        width: 100%;
+
+        &__box {
+            width: 100%;
+            padding: 1em;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+
+            &__forms {
+                width: 100%;
+                max-width: 520px;
+
+                &__label {
+                    padding-left: 1em;
+                    display: flex;
+                    justify-content: start;
+                    font-size: 1.4rem;
+                }
+
+                &__input-line {
+                    width: 100%;
+                    display: flex;
+                    justify-content: center;
+                    flex-wrap: wrap;
+
+                    &__label {
+                        padding-left: 1em;
+                        width: 100%;
+                        display: flex;
+                        justify-content: start;
+                        font-size: 1.4rem;
+                    }
+
+                    &__input-name,
+                    &__input-email {
+                        margin: 1em 0;
+                        padding: 1em 2em;
+                        width: 100%;
+                        background: none;
+                        border-radius: 8px;
+                        border: none;
+                        outline: none;
+                        background: $dark-color;
+                        font-family: 'Raleway', sans-serif;
+                        color: $menu-letters-color;
+                        font-size: 1.6rem;
+                    }
+                }
+
+
+
+                &__input-subject {
+                    margin: 1em 0;
+                    padding: 1em 2em;
+                    width: 100%;
+                    background: none;
+                    border-radius: 8px;
+                    border: none;
+                    outline: none;
+                    background: $dark-color;
+                    font-family: 'Raleway', sans-serif;
+                    color: $menu-letters-color;
+                    font-size: 1.6rem;
+                }
+
+                &__input-textarea {
+                    max-width: 100%;
+                    min-width: 100%;
+                    margin: 1em 0;
+                    padding: 1em 2em;
+                    border-radius: 8px;
+                    border: none;
+                    outline: none;
+                    background: $dark-color;
+                    font-family: 'Raleway', sans-serif;
+                    color: $menu-letters-color;
+                    font-size: 1.6rem;
+                }
+
+                &__btn {
+                    width: 120px;
+                    margin: 2em 0;
+                    padding: 1em 2em;
+                    background: none;
+                    border: 1px solid $blue-color;
+                    text-decoration: none;
+                    font-size: 1.4rem;
+                    color: $blue-color;
+                    cursor: pointer;
+                    transition: background-color .3s;
+                }
+
+                &__btn:hover {
+                    background-color: $blue-color;
+                    color: $white-color;
+                }
+
+            }
+
+            &__image {
+                position: relative;
+                margin: 2em 0;
+                max-width: 520px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                &__shadow {
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 8px;
+                    background-color: rgba(0, 0, 0, .6);
+                    z-index: 10;
+                }
+
+                &__img {
+                    width: 100%;
+                    min-width: 200px;
+                    border-radius: 8px;
+                }
+
+                &__heading {
+                    position: absolute;
+                    top: 0;
+                    padding: .8em 0;
+                    color: $menu-letters-color;
+                    z-index: 50;
+                }
+
+                &__text {
+                    position: absolute;
+                    padding-top: 2em;
+                    min-height: 200px;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: start;
+                    font-size: 1.4rem;
+                    color: $menu-letters-color;
+                    z-index: 50;
+
+                    &__content {
+                        padding: 1em 0;
+                        display: flex;
+                        flex-direction: column;
+                        text-align: left;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+//FOOTER
+
 .footer {
     width: 100%;
     height: 100px;
@@ -388,6 +564,8 @@ body {
     letter-spacing: .1rem;
     color: $white-color;
 }
+
+
 
 //------MEDIA------- 
 
@@ -459,6 +637,24 @@ body {
             }
         }
     }
+
+    .contact {
+        &__container {
+            &__box {
+                &__image {
+                    &__heading {
+                        padding: 1.4em 0;
+                        font-size: 2.8rem;
+                    }
+
+                    &__text {
+                        padding-top: 2em;
+                        font-size: 1.5rem;
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media (min-width: 370px) {
@@ -485,6 +681,22 @@ body {
                     &__text {
 
                         padding: 1.3em 1.3em 2em;
+                    }
+                }
+            }
+        }
+    }
+
+    .contact {
+        &__container {
+            &__box {
+                &__image {
+                    &__text {
+                        font-size: 1.6rem;
+
+                        &__content {
+                            padding: 1.4em 0;
+                        }
                     }
                 }
             }
@@ -588,6 +800,30 @@ body {
         }
     }
 
+    .contact {
+        &__title {
+            font-size: 3.4rem;
+        }
+
+        &__text {
+            padding-top: .5em;
+            font-size: 1.6rem;
+        }
+    }
+}
+
+@media (min-width: 430px) {
+    .contact {
+        &__container {
+            &__box {
+                &__image {
+                    &__text {
+                        font-size: 1.8rem;
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media (min-width: 465px) {
@@ -598,6 +834,20 @@ body {
             &__left-box {
                 max-width: 433px;
                 justify-content: center;
+            }
+        }
+    }
+
+    .contact {
+        &__container {
+            &__box {
+                &__image {
+                    &__text {
+                        &__content {
+                            padding: 2em 0;
+                        }
+                    }
+                }
             }
         }
     }
@@ -679,6 +929,27 @@ body {
                 }
             }
         }
+    }
 
+    .contact {
+        &__title {
+            font-size: 3.6rem;
+        }
+
+        &__container {
+            &__box {
+                &__image {
+
+                    &__heading {
+                        padding: 2em 0;
+                        font-size: 3rem;
+                    }
+
+                    &__text {
+                        font-size: 2rem;
+                    }
+                }
+            }
+        }
     }
 }
