--- a/css/style.css
+++ b/css/style.css
@@ -564,6 +564,7 @@ body {
   margin: 2em 0;
   padding: 1em 2em;
   background: none;
+  border-radius: 8px;
   border: 1px solid #2f8fe2;
   text-decoration: none;
   font-size: 1.4rem;
