--- a/scss/style.scss
+++ b/scss/style.scss
@@ -479,6 +479,7 @@ body {
                     margin: 2em 0;
                     padding: 1em 2em;
                     background: none;
+                    border-radius: 8px;
                     border: 1px solid $blue-color;
                     text-decoration: none;
                     font-size: 1.4rem;
